--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Some CSS</h1>
-    <button class="btn">Push it</button>
+    <button class="toogle">Push me</button>
     <script src="main.js"></script>
   </body>
 </html>
