--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>Playground</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Some CSS</h1>
-    <button class="toogle">Push me</button>
-    <script src="main.js"></script>
+    <script src="src/app.js" type="module"></script>
   </body>
 </html>
